# ecommerce

./: Cargo.toml  mock_data.csv  todo.md
src/: main.rs
src/controllers/: cart.rs  home.rs  mod.rs  product_details.rs
src/html/: 404.html  _navbar.html  cart.html  empty_cart.html  index.html  payment.html  product_details.html  stripe-webhook.html
src/mock_data/: products.csv
src/public/styles/: global.css  index.css  navbar.css  payment.css  product_details.css
src/styles/: cart.css  global.css  index.css  navbar.css  payment.css  product_details.css
src/templates/: index.html
src/utils/: mod.rs
