[package]
name = "ecommerce"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
bigdecimal = "0.4.5"
csv = "1.3.0"
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
sqlx = { version = "0.8", features = ["bigdecimal", "postgres", "runtime-tokio-native-tls", "macros"] }
tera = "1.20.0"
